Bump mEvalEx to build 5.